# qtmc

./: CMakeLists.txt  README.md  qtmc.desktop  qtmc_global.h.in
doc/: Doxyfile  qtmc.1
lib/qtmc/: qtmc.qmlproject
lib/qtmc/qml/: Dashboard.qml  FileBrowser.qml  Player.qml  QtMC.qml  Settings.qml  Slider.qml  WebBrowser.qml  Widget.qml  main.qml  qtmc.qmlproject
mediadb/: CMakeLists.txt  mediadb.cpp  mediadb.h
qtmc/: CMakeLists.txt  main.cpp  qtmc.h  qtmc.qrc
qtmc/icons/: .directory
qtmc/qml/: FileBrowser.qml  Player.qml  Widget.qml  main.qml
translations/: qtmc_nl.ts
